All modules are completed

--- a/RentCarClient/apps/Admin/src/pages/vehicles/create/create.html
+++ b/RentCarClient/apps/Admin/src/pages/vehicles/create/create.html
@@ -60,6 +60,8 @@
                   name="categoryId"
                   language="tr"
                   [required]="true"
+                  fontSize="15px"
+                  height="50px"
                   placeholder="Kategori seçiniz" />
               </div>
               <div class="col-md-6">
@@ -101,7 +103,7 @@
                 <label class="form-label">Yakıt Türü *</label>
                 <select class="form-select" [(ngModel)]="data().fuelType" name="fuelType" required>
                   <option value="">Yakıt türü seçiniz</option>
-                  @for (item of fuelTypeList; track $index) {
+                  @for (item of fuelTypeList(); track $index) {
                     <option [value]="item">{{item}}</option>
                   }
                 </select>
@@ -110,7 +112,7 @@
                 <label class="form-label">Şanzıman *</label>
                 <select class="form-select" [(ngModel)]="data().transmission" name="transmission" required>
                   <option value="">Şanzıman seçiniz</option>
-                  @for (item of transmissionList; track $index) {
+                  @for (item of transmissionList(); track $index) {
                     <option [value]="item">{{item}}</option>
                   }
                 </select>
