--- a/RentCarClient/apps/Admin/src/pages/protection-packages/protection-packages.html
+++ b/RentCarClient/apps/Admin/src/pages/protection-packages/protection-packages.html
@@ -1,4 +1,5 @@
 <grid
+#grid
   pageTitle="Koruma Paketleri"
   endpoint="/rent/odata/protection-packages"
   [addOptions]="{url: '/protection-packages/add', permission: 'protectionpackage:create' }"
@@ -6,9 +7,13 @@
   [detailOptions]="{url: '/protection-packages/detail', permission: 'protectionpackage:view'}"
   [deleteOptions]="{url: '/rent/protection-packages', permission: 'protectionpackage:delete'}"
   [breadcrumbs]="bredcrumbs()"
-  captionTitle="Koruma Paketi Listesi"
+  captionTitle="Güvence Paketi Listesi"
+  [sort]="{field: 'orderNumber', dir: 'asc'}"
+  [reorderable]="true"
+  (onReoder)="onReorder($event)"
 >
   <flexi-grid-column field="name" title="Paket Adı"/>
   <flexi-grid-column field="price" title="Fiyat" filterType="number" format="c" textAlign="right" symbol="₺"/>
   <flexi-grid-column field="isRecommended" title="Önerilen mi?" filterType="boolean" [booleanData]="['Evet', 'Hayır']" textAlign="center"/>
+  <flexi-grid-column field="orderNumber" title="Sıra Numarası" textAlign="center"/>
 </grid>
