--- a/RentCarClient/apps/Admin/src/pages/vehicles/vehicles.html
+++ b/RentCarClient/apps/Admin/src/pages/vehicles/vehicles.html
@@ -10,10 +10,17 @@
 >
   <flexi-grid-column title="Araç Resmi">
     <ng-template flexiGridCellTemplate let-item>
-      <img [src]="`https://localhost:7104/images/${item.imageUrl}`" alt="Araç" style="width:150px;height:90px;object-fit:cover;margin-right:8px;border-radius:4px;">
+      <img
+        [src]="`https://localhost:7104/images/${item.imageUrl}`"
+        alt="Araç"
+        class="vehicle-image">
     </ng-template>
   </flexi-grid-column>
-  <flexi-grid-column field="brand" title="Marka" filterType="select" [filterData]="brandFilterData()" />
+<flexi-grid-column
+    field="brand"
+    title="Marka"
+    filterType="select"
+    [filterData]="brandFilterData()" />
   <flexi-grid-column
     field="modelYear"
     title="Model Yılı"
